power: Choose correct backlight device on laptops with hybrid graphics

On laptops with hybrid graphics the LCD panel may be connected to
a mux so that it can be driven by either GPU. In this case both
GPU drivers will register a raw backlight interface for their
LCD panel connector and g-s-d needs to pick the one for the enabled
connector rather then just picking the first one.

https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1683445
https://bugzilla.gnome.org/show_bug.cgi?id=782211